--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "intake-form",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
@@ -11,11 +13,14 @@
     "react-datetime": "^2.8.9",
     "react-dom": "^15.5.4",
     "react-dropzone": "^3.12.4",
+    "react-icons": "^2.2.3",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.1.1",
     "reactstrap": "^4.5.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
