--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "body-parser": "~1.17.1",
+    "box-node-sdk": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
@@ -20,6 +21,7 @@
     "multer": "^1.3.0",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "pipedrive": "^3.0.1",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2"
   },
