--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "scripts": {
     "start": "nf start",
-    "console": "babel-node"
+    "console": "babel-node",
+    "test": "mocha --compilers js:babel-core/register test/"
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "body-parser": "~1.17.1",
     "box-node-sdk": "^1.3.0",
     "cookie-parser": "~1.4.3",
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-promise-router": "^1.1.1",
     "foreman": "^2.0.0",
     "lodash": "^4.17.4",
+    "mime-magic": "^5.14.0",
+    "mime-types": "^2.1.15",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "pg": "^6.1.5",
@@ -34,6 +38,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-watch": "^2.0.6"
+    "babel-watch": "^2.0.6",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.3.0"
   }
 }
