--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "scripts": {
     "start": "nf start",
     "console": "babel-node",
-    "test": "mocha --compilers js:babel-core/register test/"
+    "build": "node_modules/.bin/babel backend/src/ -d backend/dist/",
+    "test": "mocha --compilers js:babel-core/register backend/test/",
+    "heroku-postbuild": "npm install --only=dev && npm install && npm run build && cd frontend/ && npm install --only=dev && npm install && npm run build"
   },
+  "engines": {
+    "node": "7.10.x"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "frontend/node_modules"
+  ],
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "body-parser": "~1.17.1",
