--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
