--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "pipedrive": "^3.0.1",
+    "react-transition-group": "^1.1.3",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2"
   },
