--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-business-days": "0.0.10",
     "prop-types": "^15.5.8",
     "query-string": "^4.3.4",
     "react": "^15.5.4",
