--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "box-node-sdk": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "crypto-js": "^3.1.9-1",
+    "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
