--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nf start",
     "console": "babel-node",
-    "build": "node_modules/.bin/babel backend/src/ -d backend/dist/",
+    "build": "node_modules/.bin/babel backend/src/ -d backend/dist/ && cp -r backend/src/views backend/dist/",
     "test": "mocha --compilers js:babel-core/register backend/test/",
     "heroku-postbuild": "npm install --only=dev && npm install && npm run build && cd frontend/ && npm install --only=dev && npm install && npm run build"
   },
@@ -36,6 +36,7 @@
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "pipedrive": "^3.0.1",
+    "raven": "^2.0.2",
     "react-transition-group": "^1.1.3",
     "sequelize": "^3.30.4",
     "serve-favicon": "~2.4.2",
