--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "console": "babel-node",
     "build": "node_modules/.bin/babel backend/src/ -d backend/dist/ && cp -r backend/src/views backend/dist/",
     "test": "mocha --compilers js:babel-core/register backend/test/",
-    "heroku-postbuild": "npm install --only=dev && npm install && npm run build && cd frontend/ && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "npm install --only=dev && npm install && npm run build && cd frontend/ && npm install --only=dev && npm install && npm run build",
+    "db:migrate": "babel-node scripts/sequelize.js db:migrate",
+    "seed:create": "babel-node scripts/sequelize.js seed:create",
+    "db:seed:all": "babel-node scripts/sequelize.js db:seed:all",
+    "migration:create": "babel-node scripts/sequelize.js migration:create"
   },
   "engines": {
     "node": "7.10.x"
@@ -26,6 +30,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-basic-auth": "^1.1.1",
     "express-promise-router": "^1.1.1",
     "foreman": "^2.0.0",
     "lodash": "^4.17.4",
@@ -39,6 +44,7 @@
     "raven": "^2.0.2",
     "react-transition-group": "^1.1.3",
     "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
     "serve-favicon": "~2.4.2",
     "string-replace-middleware": "0.0.1"
   },
