--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "nf start",
     "console": "babel-node",
     "build": "node_modules/.bin/babel backend/src/ -d backend/dist/ && cp -r backend/src/views backend/dist/",
-    "test": "mocha --compilers js:babel-core/register backend/test/",
+    "test": "NODE_ENV=test backend/bin/wipe_db_for_tests && NODE_ENV=test mocha --compilers js:babel-core/register backend/test/",
+    "test-no-wipe-db": "NODE_ENV=test mocha --compilers js:babel-core/register backend/test/",
     "heroku-postbuild": "npm install --only=dev && npm install && npm run build && cd frontend/ && npm install --only=dev && npm install && npm run build",
     "db:migrate": "babel-node scripts/sequelize.js db:migrate",
     "db:migrate:undo": "babel-node scripts/sequelize.js db:migrate:undo",
     "seed:create": "babel-node scripts/sequelize.js seed:create",
     "db:seed:all": "babel-node scripts/sequelize.js db:seed:all",
-    "migration:create": "babel-node scripts/sequelize.js migration:create --name"
+    "migration:create": "babel-node scripts/sequelize.js migration:create --name",
+    "postgres": "nf start db"
   },
   "engines": {
     "node": "7.10.x"
@@ -23,47 +25,48 @@
   ],
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "body-parser": "~1.17.1",
-    "box-node-sdk": "^1.3.0",
+    "body-parser": "^1.17.2",
+    "box-node-sdk": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "crypto-js": "^3.1.9-1",
     "csurf": "^1.9.0",
-    "debug": "~2.6.3",
+    "debug": "^2.6.8",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.15.3",
     "express-basic-auth": "^1.1.1",
     "express-promise-router": "^1.1.1",
     "foreman": "^2.0.0",
     "lodash": "^4.17.4",
     "mime-magic": "^5.14.0",
-    "mime-types": "^2.1.15",
-    "morgan": "~1.8.1",
+    "mime-types": "^2.1.16",
+    "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
-    "pg": "^6.1.5",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
-    "pipedrive": "^3.0.1",
-    "raven": "^2.0.2",
-    "react-transition-group": "^1.1.3",
+    "pipedrive": "^3.0.2",
+    "raven": "^2.1.0",
+    "react-transition-group": "^1.2.0",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
-    "serve-favicon": "~2.4.2",
+    "serve-favicon": "^2.4.3",
     "string-replace-middleware": "0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-watch": "^2.0.6",
+    "babel-watch": "^2.0.7",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "mocha": "^3.3.0"
+    "longjohn": "^0.2.12",
+    "mocha": "^3.4.2"
   }
 }
