--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       # run tests!
       - run:
           name: tests
-          command: npm run test-for-circleci
+          command: npm run test-circleci
 
       - store_test_results:
           path: /tmp/test-results
