--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chai-as-promised": "^6.0.0",
     "longjohn": "^0.2.12",
     "mocha": "^3.4.2",
-    "mocha-junit-reporter": "^1.13.0"
+    "mocha-junit-reporter": "^1.13.0",
+    "sinon": "^2.4.1"
   }
 }
