--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -7,10 +7,14 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "google-libphonenumber": "^3.0.0",
+    "moment": "^2.18.1",
+    "parse-decimal-number": "^0.1.1",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
+    "react-content-editable": "^1.0.1",
+    "react-contenteditable": "^2.0.4",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
