lock version of sequelize

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "pipedrive": "^3.0.2",
     "raven": "^2.1.0",
     "react-transition-group": "^1.2.0",
-    "sequelize": "^3.30.4",
+    "sequelize": "3.30.4",
     "sequelize-cli": "^2.7.0",
     "serve-favicon": "^2.4.3",
     "string-replace-middleware": "0.0.1",
